# ud

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
docs/: ARCHITECTURE.md  MANIFESTO.md  v0.0.2.md  v0.0.3.md
resources/: attributions.md
scripts/: check_crates.py
src/: check_crates.py  lib.rs  main.rs
src/core/: contract.rs  mod.rs  model.rs  pipeline.rs  report.rs  resolve.rs  runtime.rs
src/ecosystems/: cargo.rs
tests/: pipeline_tests.rs
tests/fixtures/large_project/: Cargo.toml
