[package]
name = "ud"
version = "0.0.1"
edition = "2024"
description = "UpDate your dependencies!"
authors = ["Yrrrrrf <fer.rezac@outlook.com>"]
documentation = "http://docs.rs/ud"
repository = "https://github.com/Yrrrrrf/ud"
license = "MIT"

# add optimizations for the dependencies
[profile.release]
lto = true    # link-time optimization (LTO)
opt-level = 3 # optimization level
# codegen-units = 16   # number of threads to use for codegen

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["full"] }
futures = "0.3.32"
miette = { version = "7.6.0", features = ["fancy"] }
owo-colors = "4.3.0"
reqwest = { version = "0.13.4", features = ["json"] }
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml_edit = "0.25.12"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
tempfile = "3.27.0"
