[package]
name = "ud"
version = "0.0.3"
edition = "2024"
description = "UpDate! — A fast, universal dependency updater."
authors = ["Yrrrrrf <fer.rezac@outlook.com>"]
documentation = "https://docs.rs/ud"
repository = "https://github.com/Yrrrrrf/ud"
license = "MIT"
readme = "README.md"
keywords = ["dependencies", "updater", "cargo", "semver"]
categories = ["command-line-utilities", "development-tools"]

# add optimizations for the dependencies
[profile.release]
lto = true    # link-time optimization (LTO)
opt-level = 3 # optimization level
# codegen-units = 16   # number of threads to use for codegen

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["full"] }
futures = "0.3.32"
miette = { version = "7.6.0", features = ["fancy"] }
owo-colors = "4.3.0"
reqwest = "0.13.4"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
toml_edit = "0.25.12"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.27.0"
