[package]
name = "large-test-fixture"
version = "0.1.0"
edition = "2024"

[dependencies]
dev_utils = "0.1.2"
serde = "1.0.0"
tokio = { version = "1.36", features = ["full"] }
clap = "4.5.4"
axum = "0.7.5"
tower = "0.4.13"
bevy = "0.12.0"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
reqwest = { version = "0.12.3", features = ["json"] }
anyhow = "1.0.82"
thiserror = "1.0.59"
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4"] }
dotenvy = "0.15.7"
itertools = "0.12.1"
async-trait = "0.1.80"
base64 = "0.22.0"
config = "0.14.0"
rand = "0.8.5"
bytes = "1.6.0"
futures = "0.3.30"
log = "0.4.21"
url = "2.5.0"
regex = "1.10.4"
dashmap = "5.5.3"
parking_lot = "0.12.2"
tempfile = "3.10.1"
semver = "1.0.22"
hex = "0.4.3"
sha2 = "0.10.8"
hmac = "0.12.1"
jwt = "0.16.0"
validator = "0.16.1"
indexmap = "2.2.6"
once_cell = "1.19.0"
lazy_static = "1.4.0"
tokio-util = "0.7.10"
pin-project = "1.1.5"
smallvec = "1.13.2"
crossbeam = "0.8.4"
rayon = "1.10.0"
hyper = "1.3.1"
http = "1.1.0"
color-eyre = "0.6.3"
eyre = "0.6.12"
matchit = "0.7.3"
multimap = "0.10.0"
pretty_assertions = "1.4.0"
criterion = "0.5.1"
mockall = "0.12.1"
proptest = "1.4.0"
wiremock = "0.6.0"
governor = "0.6.3"
nonzero_ext = "0.3.0"
typed-builder = "0.18.1"
strum = "0.26.2"
strum_macros = "0.26.2"
getrandom = "0.2.14"
bitflags = "2.5.0"
num = "0.4.2"
num_cpus = "1.16.0"
which = "6.0.1"
fs_extra = "1.3.0"
walkdir = "2.5.0"
glob = "0.3.1"
ignore = "0.4.22"
indicatif = "0.17.8"
console = "0.15.8"
dialoguer = "0.11.0"
shell-words = "1.1.0"
dirs = "5.0.1"
confy = "0.6.1"
open = "5.1.2"
opener = "0.7.1"
edit = "0.1.5"
tempdir = "0.3.7"
assert_cmd = "2.0.14"
predicates = "3.1.0"
escargot = "0.5.9"
wait-timeout = "0.2.0"
duct = "0.13.7"
os_pipe = "1.1.5"
shared_child = "1.0.0"
command-group = "2.1.0"
notify = "6.1.1"
inotify = "0.10.2"
kqueue = "1.0.8"
fsevent-sys = "4.1.0"
redox_syscall = "0.5.1"
libc = "0.2.153"
winapi = "0.3.9"
windows = "0.56.0"
